--- a/src/Techtonica Mod Loader/Techtonica Mod Loader.csproj
+++ b/src/Techtonica Mod Loader/Techtonica Mod Loader.csproj
@@ -19,6 +19,12 @@
 
   <ItemGroup>
     <PackageReference Include="Autoupdater.NET.Official" Version="1.8.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="SharpVectors" Version="1.8.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controls\" />
   </ItemGroup>
 
 </Project>
