--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+
+Techtonica Mod Loader.runtimeconfig.dev.json
+src/Techtonica Mod Loader/bin/*
+src/Techtonica Mod Loader/obj/*
+src/Techtonica Mod Loader/properties/*
 .vs
-bin
-obj
