Dev branch fix.
So this is the dev branch.
Make sure we all pull request to this branch.

When a new version is ready we will create a new branch, supply the files to that branch from dev. And merge with Main. Then release version and signal auto updater a new version is available.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 
 Techtonica Mod Loader.runtimeconfig.dev.json
-src/Techtonica Mod Loader/bin/*
-src/Techtonica Mod Loader/obj/*
-src/Techtonica Mod Loader/properties/*
+Techtonica Mod Loader/bin/*
+Techtonica Mod Loader/obj/*
+Techtonica Mod Loader/properties/*
 .vs
-src/TechtonicaML_AutoUpdate.xml
+TechtonicaML_AutoUpdate.xml
