--- a/Techtonica Mod Loader/Techtonica Mod Loader.csproj
+++ b/Techtonica Mod Loader/Techtonica Mod Loader.csproj
@@ -18,9 +18,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Background.jpg" />
+    <None Remove="BepInEx.png" />
+    <None Remove="Controls\BepInEx.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Autoupdater.NET.Official" Version="1.8.3" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="SharpVectors" Version="1.8.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Background.jpg" />
+    <Resource Include="BepInEx.png" />
   </ItemGroup>
 
 </Project>
