--- a/Techtonica Mod Loader/Techtonica Mod Loader.csproj
+++ b/Techtonica Mod Loader/Techtonica Mod Loader.csproj
@@ -15,12 +15,17 @@
     <RepositoryType>Github</RepositoryType>
     <AssemblyVersion>0.0.1.20</AssemblyVersion>
     <FileVersion>0.0.1.20</FileVersion>
+    <ApplicationIcon>TML Logo.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
     <None Remove="Background.jpg" />
     <None Remove="Controls\BepInEx.png" />
     <None Remove="Logo.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="TML Logo.ico" />
   </ItemGroup>
 
   <ItemGroup>
