--- a/Techtonica Mod Loader/Techtonica Mod Loader.csproj
+++ b/Techtonica Mod Loader/Techtonica Mod Loader.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
     <RootNamespace>Techtonica_Mod_Loader</RootNamespace>
     <UseWPF>true</UseWPF>
